@@ -1,3 +1,13 @@
+2009-01-19  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by David Hyatt.
+
+        Bug 23399: AX: some buttons don't expose AXPress as an action
+        https://bugs.webkit.org/show_bug.cgi?id=23399
+
+        * accessibility/button-press-action-expected.txt: Added.
+        * accessibility/button-press-action.html: Added.
+
 2009-01-17  Eric Carlson  <eric.carlson@apple.com>
 
         Reviewed by Adele Peterson
